# ssl-expiry-checker-azure-func

./: .env.template  .gitignore  .pylintrc  README.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml  flake8.yml  mypy.yml  pylint.yml
templates/: email.html
