[tool.poetry]
name = "ssl-expiry-checker-azure-func"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyopenssl = "^25.0.0"
requests = "^2.32.3"
jinja2 = "^3.1.6"
azure-functions = "^1.21.3"
python-dotenv = "^1.0.1"
mysql-connector-python = "^9.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
mypy = "^1.15.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
